--- a/documentRootFolder/CASO1/index.html
+++ b/documentRootFolder/CASO1/index.html
@@ -91,6 +91,7 @@
         <li><a href="./../CASO2/index.html">Caso 2</a></li>
         <li><a href="./../CASO3/index.html">Caso 3: Texto de 1MB</a></li>
         <li><a href="./../CASO4/index.html">Caso 4</a></li>
+        <li><a href="./../CASO5/index.html">Caso 5</a></li>
       </ul>
     </nav>
     <div class="image-container">
