--- a/documentRootFolder/CASO2/index.html
+++ b/documentRootFolder/CASO2/index.html
@@ -91,6 +91,7 @@
         <li><a href="./../CASO2/index.html">Caso 2</a></li>
         <li><a href="./../CASO3/index.html">Caso 3: Texto de 1MB</a></li>
         <li><a href="./../CASO4/index.html">Caso 4</a></li>
+        <li><a href="./../CASO5/index.html">Caso 5</a></li>
       </ul>
     </nav>
     <div class="image-container">
@@ -105,6 +106,12 @@
       <div class="image">
         <img src="./../Imagenes/nyaan.png" alt="" width="200px" height="200px">
         <p class="caption">Imagen 3</p>
+      </div>
+      <div class="image">
+        <video width="320" height="240" controls>
+          <source src="./../Archivos/video.mp4">
+          <p class="caption">video</p>
+        </video>
       </div>
     </div>
   </body>
