--- a/documentRootFolder/CASO5/index.html
+++ b/documentRootFolder/CASO5/index.html
@@ -64,9 +64,66 @@
     <script>
         const enviar = document.getElementById("enviar")
         const fileInput = document.getElementById('file-input');
+        let file;
         let binaryData;
+        async function saberContentType(extension){
+          if (extension == ".jpg" || extension == ".jpeg")
+    {
+        return "image/jpeg";
+    }
+    else if (extension == ".html")
+    {
+        return "text/html";
+    }
+    else if (extension == ".css")
+    {
+        return "text/css";
+    }
+    else if (extension == ".txt")
+    {
+        return "text/plain";
+    }
+    else if (extension == ".json")
+    {
+        return "application/json";
+    }
+    else if (extension == ".gif")
+    {
+        return "image/gif";
+    }
+    else if (extension == ".png")
+    {
+        return "image/png";
+    }
+    else if (extension == ".exe")
+    {
+        return "application/octet-stream";
+    }
+    else if (extension == ".docx")
+    {
+        return "application/msword";
+    }
+    else if (extension == ".xml")
+    {
+        return "application/xml";
+    }
+    else if (extension == ".pptx")
+    {
+        return "application/vnd.openxmlformats-officedocument.presentationml.presentation";
+    }
+    else if (extension == ".xlsx")
+    {
+        return "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet";
+    }else if(extension == ".mp4"){
+        return "video/mp4";
+    }
+    else
+    {
+        return "error";
+    }
+        }
         fileInput.addEventListener('change', () => {
-            const file = fileInput.files[0];
+            file = fileInput.files[0];
             const reader = new FileReader();
             reader.onload = () => {
                 binaryData = new Uint8Array(reader.result);
@@ -75,14 +132,20 @@
             reader.readAsArrayBuffer(file);
         });
         
+        
         enviar.addEventListener("click", () => {
-            const url = "http://127.0.0.1:8080/form"
+            const url = "http://127.0.0.1:8080/form";
+            extension = file.type
+            let nombre = file.name
+            let nombreDeArchivoSinExtension = nombre.split(".")[0];
+            console.log(nombreDeArchivoSinExtension);
+            let Content = saberContentType(extension)
             fetch(url, {
                     method: 'POST',
                     body: binaryData,
                     headers: {
-                        'Content-Type': 'application/msword',
-                        'nameFile': 'ArchivoDesdePaginaWeb2',
+                        'Content-Type': extension,
+                        'nameFile': nombreDeArchivoSinExtension,
                         'mode': 'no-cors'
                     }
                 })
